--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "build": "node_modules/.bin/gulp build",
     "dev": "node_modules/.bin/gulp dev"
   },
+  "keywords": [
+    "dom", 
+    "events"
+  ],
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:brianium/element-container.git"
+    "url": "https://github.com/brianium/element-container"
   },
   "devDependencies": {
     "browserify": "^8.0.3",
